--- a/shows.html
+++ b/shows.html
@@ -93,7 +93,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/world.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
+                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/" target="_blank">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅2nd-11th August 2024</p>
@@ -103,7 +103,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.cityline.com/Events.html" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/final.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
+                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/" target="_blank">
                                 <h3>René [Final Call] 2024 Live Tour-Macau</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅17th August 2024</p>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/more.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
+                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/" target="_blank">
                                 <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅30th-31st August 2024</p>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/idol.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
+                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/" target="_blank">
                                 <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
                                 </h3>
                                 <span>📍Galaxy Macau</span>
@@ -167,7 +167,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/zen.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f">
+                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f" target="_blank">
                                 <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
                                 </h3>
                                 <span>📍Studio City Event Center</span>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/sing.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024.">
+                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024." target="_blank">
                                 <h3>Raymond Lam Concert 2024 | Love Flows LF Live 2024</h3>
                                 <span>📍The Londoner Macau
                                 </span>
@@ -207,7 +207,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024."
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/stray.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
+                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef" target="_blank">
                                 <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
                                 </h3>
                                 <span>📍Galaxy Macau</span>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
