--- a/exhibitions.html
+++ b/exhibitions.html
@@ -91,7 +91,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/harry.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193">
+                                href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193" target="_blank">
                                 <h3>Harry Potter™: The Exhibition
                                 </h3>
                                 <span>📍The Venetian Macau</span>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/teamlab.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193">
+                                href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193" target="_blank">
                                 <h3>TeamLab - SuperNature Macao</h3>
                                 <span>📍The Venetian Macau</span>
                                 <p>📅 Daily</p>
@@ -129,7 +129,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/chivary.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition">
+                                href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition" target="_blank">
                                 <h3>MGM X Ren Zhe – “Legends of Chivalry” Art Exhibition</h3>
                                 <span>📍MGM Cotai</span>
                                 <p>📅 Daily</p>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/pompidou.jfif" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU">
+                                href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU" target="_blank">
                                 <h3>Fantastic Art World from CENTRE POMPIDOU: The Plantamouves
                                 </h3>
                                 <span>📍MGM Cotai
@@ -184,14 +184,14 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/giraffe.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin" target="_blank">
                                 <h3>Monumental Digital Art “Giraffe meets Qilin”
 
                                 </h3>
@@ -215,14 +215,14 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/mart.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture" target="_blank">
                                 <h3>’M ART - Arts and Culture Creative Experience
                                 </h3>
                                 <span>📍MGM Cotai
@@ -237,15 +237,15 @@
                                 inspiring cultural tourism experience.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture" class="button_main">Buy
-                                Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/sea.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey" target="_blank">
                                 <h3>Sea Odyssey</h3>
                                 <span>📍MGM Cotai
                                 </span>
@@ -261,8 +261,8 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey" class="button_main">Buy
-                                Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/car.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition">
+                                href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition" target="_blank">
                                 <h3>2024 Hypercar Exhibition
                                 </h3>
                                 <span>📍Wynn Signature
@@ -293,8 +293,8 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition"
-                                class="button_main">Buy
-                                Tickets CTA</a>
+                                class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
