--- a/tour.html
+++ b/tour.html
@@ -93,7 +93,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/gertiage.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.wh.mo/en/site/detail/18">
+                        <div class="together"> <a href="https://www.wh.mo/en/site/detail/18" target="_blank">
                                 <h3>Ruins of St. Paul's</h3>
                                 <span>📍 Historic Centre of Macau</span>
                             </a>
@@ -103,7 +103,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main">Buy Tickets</a>
+                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/viator.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446">
+                                href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446" target="_blank">
                                 <h3>Senado Square
                                 </h3>
                                 <span>📍 Central Macau</span>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/klook.webp" alt="macao"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB">
+                                href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB" target="_blank">
                                 <h3>Macau Tower</h3>
                                 <span>📍 Macau Peninsula
                                 </span>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB"
-                                class="button_main">Buy Tickets</a>
+                                class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/temple.jpg" alt="macao"></div>
                         <div class="together"> <a
-                                href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450">
+                                href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450" target="_blank">
                                 <h3>A-Ma Temple</h3>
                                 <span>📍 Coloane</span>
                             </a>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450"
-                                class="button_main">Buy
+                                class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/museum.jpg" alt="macao"></div>
-                        <div class="together"> <a href="https://www.museums.gov.mo/eng/museums.html">
+                        <div class="together"> <a href="https://www.museums.gov.mo/eng/museums.html" target="_blank">
                                 <h3>Macau Museum</h3>
                                 <span>📍 Historic Centre of Macau</span>
                             </a>
@@ -179,7 +179,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main">Buy Tickets</a>
+                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/village.avif" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village">
+                                href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village" target="_blank">
                                 <h3>Coloane Village</h3>
                                 <span>📍 Coloane Island</span>
                             </a>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village"
-                                class="button_main">Buy
+                                class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/taipavillage.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/">
+                        <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/" target="_blank">
                                 <h3>Taipa Village
                                 </h3>
                                 <span>📍 Taipa Island
@@ -219,7 +219,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main">Buy
+                            <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/panda.avif" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion">
+                                href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion" target="_blank">
                                 <h3>Macau Giant Panda Pavilion
                                 </h3>
                                 <span>📍 Coloane Island</span>
@@ -239,7 +239,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion"
-                                class="button_main">Buy
+                                class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
