--- a/shows.html
+++ b/shows.html
@@ -130,9 +130,8 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/more.webp" alt="macau"></div>
-                        <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/" target="_blank">
-                                <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
+                        <div class="together"><a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/" target="_blank">
+                                <h3>TOMORROW X TOGETHER WORLD TOUR ACT:PROMISE IN MACAU </h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅30th-31st August 2024</p>
                             </a>
