--- a/hotel.html
+++ b/hotel.html
@@ -95,7 +95,7 @@
                         <div class="img_transition"><img src="img/venetianmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.venetianmacao.com/" target="_blank">
                                 <h3>The Venetian Macao
-                                </h3>
+                                </h3></a>
                                 <ul>
                                     <li>Large luxury resort</li>
                                     <li>themed shopping mall</li>
@@ -112,7 +112,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/dreams.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.cityofdreamsmanila.com/en" target="_blank">
-                                <h3>City of Dreams</h3>
+                                <h3>City of Dreams</h3></a>
                                 <ul>
                                     <li>Integrated resort with a casino</li>
                                     <li>multiple hotels (Grand Hyatt, Crown Towers, Morpheus)</li>
@@ -129,7 +129,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynn.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace" target="_blank">
-                                <h3>Wynn Palace</h3>
+                                <h3>Wynn Palace</h3></a>
                                 <ul>
                                     <li>Luxury resort and casino</li>
                                     <li>Performance lake</li>
@@ -146,7 +146,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau" target="_blank">
-                                <h3>Wynn Macau</h3>
+                                <h3>Wynn Macau</h3></a>
                                 <ul>
                                     <li>High-end casino resort</li>
                                     <li>Luxury accommodations</li>
@@ -162,7 +162,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/cotai.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai" target="_blank">
-                                <h3>MGM Cotai</h3>
+                                <h3>MGM Cotai</h3></a>
                                 <ul>
                                     <li>Modern resort with a casino</li>
                                     <li>Art installations</li>
@@ -179,7 +179,7 @@
                         <div class="img_transition"><img src="img/mgmmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/" target="_blank">
                                 <h3>MGM Macau
-                                </h3>
+                                </h3></a>
                                 <ul>
                                     <li>Grand casino</li>
                                     <li>Retail Stores</li>
@@ -196,7 +196,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/lisoba.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.grandlisboa.com/en" target="_blank">
-                                <h3>Grand Lisboa</h3>
+                                <h3>Grand Lisboa</h3></a>
                                 <ul>
                                     <li>Iconic casino hotel</li>
                                     <li>Large casino</li>
@@ -214,7 +214,7 @@
                         <div class="img_transition"><img src="img/fourseasons.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.fourseasons.com/macau/" target="_blank">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
-                                </h3>
+                                </h3></a>
                                 <ul>
                                     <li>Luxury hotel</li>
                                     <li>High end casino</li>
@@ -232,7 +232,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/parisian.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.parisianmacao.com/" target="_blank">
-                                <h3>The Parisian Macao</h3>
+                                <h3>The Parisian Macao</h3></a>
                                 <ul>
                                     <li>Resort with a replica Eiffel Tower</li>
                                     <li>Themed Parisian decor</li>
