--- a/hotel.html
+++ b/hotel.html
@@ -31,7 +31,7 @@
                                 Shows</a>
                         </li>
                         <li>
-                            <a href="hotel.html">Hotels</a>
+                            <a href="hotel.html" class="active">Hotels</a>
                         </li>
                         <li>
                             <a href="sport.html">Sports</a>
