--- a/shows.html
+++ b/shows.html
@@ -27,8 +27,7 @@
                                 Exhibitions</a>
                         </li>
                         <li>
-                            <a href="shows.html">
-                                Shows</a>
+                            <a href="shows.html" class="active">Shows</a>
                         </li>
                         <li>
                             <a href="hotel.html">Hotels</a>
