--- a/sport.html
+++ b/sport.html
@@ -34,7 +34,7 @@
                             <a href="hotel.html">Hotels</a>
                         </li>
                         <li>
-                            <a href="sport.html">Sports</a>
+                            <a href="sport.html" class="active">Sports</a>
                         </li>
                         <li><a href="tour.html">Tour</a></li>
                     </ul>
