--- a/exhibitions.html
+++ b/exhibitions.html
@@ -23,7 +23,7 @@
                     <div class="closebutton"><i class="fa fa-times-circle" aria-hidden="true"></i></div>
                     <ul>
                         <li>
-                            <a href="exhibitions.html">
+                            <a href="exhibitions.html" class="active">
                                 Exhibitions</a>
                         </li>
                         <li>
