--- a/tour.html
+++ b/tour.html
@@ -36,7 +36,7 @@
                         <li>
                             <a href="sport.html">Sports</a>
                         </li>
-                        <li><a href="tour.html">Tour</a></li>
+                        <li><a href="tour.html" class="active">Tour</a></li>
                     </ul>
                 </div>
                 <div class="open"><i class="fa fa-bars" aria-hidden="true"></i></div>
