--- a/tour.html
+++ b/tour.html
@@ -92,7 +92,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="img/gertiage.jpg" alt="macau"></div>
+                        <div class="img_transition"><img src="img/paul.jfif" alt="macau"></div>
                         <div class="together"> <a href="https://www.wh.mo/en/site/detail/18" target="_blank">
                                 <h3>Ruins of St. Paul's</h3>
                                 <span>📍 Historic Centre of Macau</span>
