--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                             The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
                             entertainment.
                         </p>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank"
+                            class="btn_pri">View More</a>
                     </div>
                 </div>
                 <div class="row event_inner">
@@ -173,6 +175,8 @@
                             heritage and sample local
                             cuisine.
                         </p>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank"
+                            class="btn_pri">View More</a>
                     </div>
                 </div>
                 <div class="row event_inner">
@@ -192,6 +196,7 @@
                             echoing the theme of
                             “Legends of Chivalry”,
                         </p>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank" class="btn_pri">View More</a>
                     </div>
                 </div>
             </div>
