--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <p class="card-text">We use cookies to enhance your browsing experience and provide personalized content. By
                 continuing to browse the site, you agree to our use of cookies. For more information, please
                 read our Privacy Policy.</p>
-            <div class="btn-toolbar justify-content-end">
+            <div class="btn-toolbar">
                 <a href="#" class="btn btn-primary accept-cookies">Accept Cookies</a>
                 <a href="#" class="btn btn-primary setting-cookies">Reject Cookies</a>
             </div>
