--- a/exhibitions.html
+++ b/exhibitions.html
@@ -179,7 +179,7 @@
                                 on many wearable extensions of the body. Come together and play a role in this strange
                                 ballet with a constellation of hybrid characters where movement is used to feed and
                                 activate
-                                the wonderful world of Plantamouves
+                                the wonderful world of Plantamouves.
                             </p>
                         </div>
                         <div class="hotel_btn">
