--- a/sport.html
+++ b/sport.html
@@ -70,7 +70,7 @@
                             offers a diverse range of sporting activities. Our listings provide detailed information on
                             upcoming events, venues, and schedules, helping you find and enjoy the best in sports
                             entertainment. Dive into the action and experience the excitement of Macau’s premier sports
-                            events</p>
+                            events.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -117,7 +117,7 @@
                                 <p>📅1st December</p>
                             </a>
                             <p>A major marathon event with multiple race categories. Sponsored by Galaxy Casino and
-                                Entertainment group
+                                Entertainment group.
                             </p>
                         </div>
                         <div class="hotel_btn">
