--- a/event.html
+++ b/event.html
@@ -63,7 +63,7 @@
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_img">
-                        <img src="img/landmark.jpg" alt="macau">
+                        <img src="img/lanmark.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
