--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Domov</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -155,8 +157,8 @@
                             The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
                             entertainment.
                         </p>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank"
-                            class="btn_pri">View More</a>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank" class="btn_pri">View
+                            More</a>
                     </div>
                 </div>
                 <div class="row event_inner">
@@ -175,8 +177,8 @@
                             heritage and sample local
                             cuisine.
                         </p>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank"
-                            class="btn_pri">View More</a>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank" class="btn_pri">View
+                            More</a>
                     </div>
                 </div>
                 <div class="row event_inner">
@@ -196,7 +198,8 @@
                             echoing the theme of
                             “Legends of Chivalry”,
                         </p>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank" class="btn_pri">View More</a>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank" class="btn_pri">View
+                            More</a>
                     </div>
                 </div>
             </div>
