--- a/shows.html
+++ b/shows.html
@@ -87,12 +87,16 @@
     <div class="thessa_detail">
         <div class="container">
             <div class="row">
-
+                <div class="col-12">
+                    <h2>Macau’s Top Shows
+                    </h2>
+                </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/world.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/" target="_blank">
+                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/"
+                                target="_blank">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅2nd-11th August 2024</p>
@@ -102,7 +106,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.cityline.com/Events.html" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +115,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/final.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/" target="_blank">
+                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
+                                target="_blank">
                                 <h3>René [Final Call] 2024 Live Tour-Macau</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅17th August 2024</p>
@@ -129,7 +135,9 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/more.webp" alt="macau"></div>
-                        <div class="together"><a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/" target="_blank">
+                        <div class="together"><a
+                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
+                                target="_blank">
                                 <h3>TOMORROW X TOGETHER WORLD TOUR ACT:PROMISE IN MACAU </h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅30th-31st August 2024</p>
@@ -148,7 +156,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/idol.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/" target="_blank">
+                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
+                                target="_blank">
                                 <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
                                 </h3>
                                 <span>📍Galaxy Macau</span>
@@ -173,7 +182,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/zen.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f" target="_blank">
+                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f"
+                                target="_blank">
                                 <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
                                 </h3>
                                 <span>📍Studio City Event Center</span>
@@ -194,7 +204,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/sing.webp" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024." target="_blank">
+                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024."
+                                target="_blank">
                                 <h3>Raymond Lam Concert 2024 | Love Flows LF Live 2024</h3>
                                 <span>📍The Londoner Macau
                                 </span>
@@ -213,7 +224,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/stray.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef" target="_blank">
+                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef"
+                                target="_blank">
                                 <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
                                 </h3>
                                 <span>📍Galaxy Macau</span>
