--- a/hotel.html
+++ b/hotel.html
@@ -89,19 +89,22 @@
     <div class="thessa_detail">
         <div class="container">
             <div class="row">
-
+                <div class="col-12">
+                    <h2>Macau’s Premier Hotels</h2>
+                </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/venetianmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.venetianmacao.com/" target="_blank">
                                 <h3>The Venetian Macao
-                                </h3></a>
-                                <ul>
-                                    <li>Large luxury resort</li>
-                                    <li>themed shopping mall</li>
-                                    <li>canal rides</li>
-                                    <li>Casino Room</li>
-                                </ul>
+                                </h3>
+                            </a>
+                            <ul>
+                                <li>Large luxury resort</li>
+                                <li>themed shopping mall</li>
+                                <li>canal rides</li>
+                                <li>Casino Room</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.venetianmacao.com/" class="button_main" target="_blank">Buy Tickets</a>
@@ -112,32 +115,37 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/dreams.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.cityofdreamsmanila.com/en" target="_blank">
-                                <h3>City of Dreams</h3></a>
-                                <ul>
-                                    <li>Integrated resort with a casino</li>
-                                    <li>multiple hotels (Grand Hyatt, Crown Towers, Morpheus)</li>
-                                    <li>Shopping Mall</li>
-                                    <li>Entertainment Venues</li>
-                                </ul>
+                                <h3>City of Dreams</h3>
+                            </a>
+                            <ul>
+                                <li>Integrated resort with a casino</li>
+                                <li>multiple hotels (Grand Hyatt, Crown Towers, Morpheus)</li>
+                                <li>Shopping Mall</li>
+                                <li>Entertainment Venues</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynn.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace" target="_blank">
-                                <h3>Wynn Palace</h3></a>
-                                <ul>
-                                    <li>Luxury resort and casino</li>
-                                    <li>Performance lake</li>
-                                    <li>Upscale amenities.</li>
-                                </ul>
+                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace"
+                                target="_blank">
+                                <h3>Wynn Palace</h3>
+                            </a>
+                            <ul>
+                                <li>Luxury resort and casino</li>
+                                <li>Performance lake</li>
+                                <li>Upscale amenities.</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main" target="_blank">Buy
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main"
+                                target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -146,15 +154,17 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau" target="_blank">
-                                <h3>Wynn Macau</h3></a>
-                                <ul>
-                                    <li>High-end casino resort</li>
-                                    <li>Luxury accommodations</li>
-                                    <li>Michelin Star Dining</li>
-                                </ul>
+                                <h3>Wynn Macau</h3>
+                            </a>
+                            <ul>
+                                <li>High-end casino resort</li>
+                                <li>Luxury accommodations</li>
+                                <li>Michelin Star Dining</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main"
+                                target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -162,12 +172,13 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/cotai.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai" target="_blank">
-                                <h3>MGM Cotai</h3></a>
-                                <ul>
-                                    <li>Modern resort with a casino</li>
-                                    <li>Art installations</li>
-                                    <li>Gourmet dining options</li>
-                                </ul>
+                                <h3>MGM Cotai</h3>
+                            </a>
+                            <ul>
+                                <li>Modern resort with a casino</li>
+                                <li>Art installations</li>
+                                <li>Gourmet dining options</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai" class="button_main" target="_blank">Buy Tickets</a>
@@ -179,12 +190,13 @@
                         <div class="img_transition"><img src="img/mgmmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/" target="_blank">
                                 <h3>MGM Macau
-                                </h3></a>
-                                <ul>
-                                    <li>Grand casino</li>
-                                    <li>Retail Stores</li>
-                                    <li>Exquisite Dining Options</li>
-                                </ul>
+                                </h3>
+                            </a>
+                            <ul>
+                                <li>Grand casino</li>
+                                <li>Retail Stores</li>
+                                <li>Exquisite Dining Options</li>
+                            </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/" class="button_main" target="_blank">Buy Tickets</a>
@@ -195,12 +207,13 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/lisoba.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.grandlisboa.com/en" target="_blank">
-                                <h3>Grand Lisboa</h3></a>
-                                <ul>
-                                    <li>Iconic casino hotel</li>
-                                    <li>Large casino</li>
-                                    <li>Various dining and entertainment options.</li>
-                                </ul>
+                                <h3>Grand Lisboa</h3>
+                            </a>
+                            <ul>
+                                <li>Iconic casino hotel</li>
+                                <li>Large casino</li>
+                                <li>Various dining and entertainment options.</li>
+                            </ul>
 
                         </div>
                         <div class="hotel_btn">
@@ -213,17 +226,19 @@
                         <div class="img_transition"><img src="img/fourseasons.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.fourseasons.com/macau/" target="_blank">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
-                                </h3></a>
-                                <ul>
-                                    <li>Luxury hotel</li>
-                                    <li>High end casino</li>
-                                    <li>Upscale amenities</li>
-                                    <li>Located in Cotai.</li>
-                                </ul>
+                                </h3>
+                            </a>
+                            <ul>
+                                <li>Luxury hotel</li>
+                                <li>High end casino</li>
+                                <li>Upscale amenities</li>
+                                <li>Located in Cotai.</li>
+                            </ul>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.fourseasons.com/macau/" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.fourseasons.com/macau/" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -231,13 +246,14 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/parisian.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.parisianmacao.com/" target="_blank">
-                                <h3>The Parisian Macao</h3></a>
-                                <ul>
-                                    <li>Resort with a replica Eiffel Tower</li>
-                                    <li>Themed Parisian decor</li>
-                                    <li>Modern casino</li>
-                                    <li>Array of restaurants</li>
-                                </ul>
+                                <h3>The Parisian Macao</h3>
+                            </a>
+                            <ul>
+                                <li>Resort with a replica Eiffel Tower</li>
+                                <li>Themed Parisian decor</li>
+                                <li>Modern casino</li>
+                                <li>Array of restaurants</li>
+                            </ul>
 
                         </div>
                         <div class="hotel_btn">
