--- a/hotel.html
+++ b/hotel.html
@@ -92,8 +92,8 @@
                 <div class="col-12">
                     <h2>Macau’s Premier Hotels</h2>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/venetianmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.venetianmacao.com/" target="_blank">
                                 <h3>The Venetian Macao
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/dreams.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.cityofdreamsmanila.com/en" target="_blank">
                                 <h3>City of Dreams</h3>
@@ -130,8 +130,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/wynn.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace"
                                 target="_blank">
@@ -150,8 +150,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau" target="_blank">
                                 <h3>Wynn Macau</h3>
@@ -168,8 +168,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/cotai.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai" target="_blank">
                                 <h3>MGM Cotai</h3>
@@ -185,8 +185,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/mgmmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/" target="_blank">
                                 <h3>MGM Macau
@@ -203,8 +203,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/lisoba.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.grandlisboa.com/en" target="_blank">
                                 <h3>Grand Lisboa</h3>
@@ -221,8 +221,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/fourseasons.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.fourseasons.com/macau/" target="_blank">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
@@ -242,8 +242,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="thessa-inner">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <div class="thessa-inner hotel_inner">
                         <div class="img_transition"><img src="img/parisian.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.parisianmacao.com/" target="_blank">
                                 <h3>The Parisian Macao</h3>
